--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,7 @@
 	--fars-light: var(--jotun-8394-hvitpoesi);
 
 	--lokum: var(--jotun-10341-kalk);
+	--lokum: var(--jotun-10679-washedlinen);
 	--lokum-light: var(--jotun-9917-klassiskhvit);
 }
 
