--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,16 @@
 	--jotun-7237-nostalgi: #d2ddca;  /* rgb(210,221,202) https://www.jotun.com/dk/da/b2c/colour-inspiration/colours/interior/1100000025101791_Interior.aspx */
 	--jotun-8238-pearsensation: #dbdfc4; /* https://www.jotun.com/me/en/decorative/exterior/colours/8238-8238 */
 
+	/* alive */
+	--jotun-8222-krydderurt: #cac5a9; /* https://www.jotun.com/dk/da/decorative/interior/colours/8222-jurassic-grey-interior */
+	--jotun-8109-aprilgron: #a4a178; /* https://www.jotun.com/dk/da/decorative/interior/colours/8109-april-green-interior */
+	--jotun-8003-blekvier: #e3e1d0; /* https://www.jotun.com/dk/da/decorative/interior/colours/8003-peppermint-interior */
+	--jotun-8493-greentea: #9f9b7c; /* https://www.jotun.com/dk/da/decorative/interior/colours/8493-green-tea-interior */
+	--jotun-8565-hope: #afad88; /* https://www.jotun.com/dk/da/decorative/interior/colours/8565-hope-interior */
+	--jotun-8302-lauerbaer: #b0ae96; /* https://www.jotun.com/no/no/decorative/interior/colours/8302-laurel-interior */
+	--jotun-8281-palelinden: #c6c6b6; /* https://www.jotun.com/no/no/decorative/interior/colours/8281-pale-linden-interior */
+	--jotun-1369-sol: ##ebd2a3; /* https://www.jotun.com/dk/da/decorative/interior/colours/1369-sun-interior */
+
 	/* misc */
 	--jotun-1832-skandinavisklys: #e7dfcd; /* https://www.jotun.com/no/no/decorative/interior/colours/1832-milky-way-interior */
 	--jotun-8279-haze: #c7c9c2; /* https://www.jotun.com/dk/da/b2c/colour-inspiration/colours/interior/2930000632801791_Interior.aspx */
@@ -122,11 +132,16 @@
 	--stuen: var(--jotun-12123-contemporarywhite);
 	--stuen-dark: var(--jotun-12075-soothingbeige);
 	--stuen-dark: var(--jotun-12176-silhouette);
+	--stuen-dark: var(--jotun-11173-humbleyellow);
 	--stuen-light: var(--jotun-0486-silke);
 
-	--kajs: var(--jotun-8118-lovsal);
-	--kajs-dark: var(--jotun-7628-treasure);
-	--kajs-light: var(--jotun-8394-hvitpoesi);
+	--kajs: var(--jotun-8222-krydderurt);
+	--kajs-dark: var(--jotun-8302-lauerbaer);
+	--kajs-light: var(--jotun-1928-sommersne);
+
+	--kajs-alt: var(--jotun-8118-lovsal);
+	--kajs-alt-dark: var(--jotun-7628-treasure);
+	--kajs-alt-light: var(--jotun-8394-hvitpoesi);
 
 	--fars: var(--jotun-8470-smoothwhite);
 	--fars-dark: var(--jotun-7637-exhale);
@@ -153,6 +168,9 @@
 }
 .kajs {
 	background-color: var(--kajs);
+}
+.kajs-alt {
+	background-color: var(--kajs-alt);
 }
 .lokum {
 	background-color: var(--lokum);
@@ -280,6 +298,9 @@ section.stuen .photo {
 section.kajs .photo {
 	background-color: var(--kajs-light);
 }
+section.kajs-alt .photo {
+	background-color: var(--kajs-alt-light);
+}
 section.fars .photo {
 	background-color: var(--fars-light);
 }
@@ -289,37 +310,12 @@ section.lokum .photo {
 section.kajs:before {
 	background-color: var(--kajs-dark);
 }
+section.kajs-alt:before {
+	background-color: var(--kajs-alt-dark);
+}
 section.fars:before {
 	background-color: var(--fars-dark);
 	background-image: url('images/kirkenes.webp');
 	background-repeat: repeat-y;
 	background-size: contain;
 }
-
-
-/*
-section:after {
-	content: '';
-  width: 10vw;
-	height: 10vw;
-	border-radius: 50%;
-	background-color: var(--jotun-7237-nostalgi);
-	position: absolute;
-	top: 10vh;
-	left: 38.1vw;
-	border: 2px solid white;
-}
-*/
-/*
-section:after {
-	content: '';
-  width: 0;
-	height: 0;
-	border-left: 31.8vw solid transparent;
-	border-right: 68.2vw solid transparent;
-	border-top: 200px solid var(--jotun-7237-nostalgi);
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-*/
