--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,7 @@
 	--jotun-1931-kokos: #e3ddcd; /* https://www.jotun.com/dk/da/b2c/colour-inspiration/colours/interior/2930001566001791_Interior.aspx */
 	--jotun-10341-kalk: #d9d3c7; /* https://www.jotun.com/dk/da/decorative/interior/colours/10341-limestone-interior */
 	--jotun-9938-dempetsort: #494948; /* https://www.jotun.com/dk/da/decorative/exterior/colours/9938-dempet-sort-exterior */
+	--jotun-12182-gentlewhisper: #d2cbbf; /* https://www.jotun.com/dk/da/decorative/interior/colours/12182-gentle-whisper-interior */
 }
 
 :root {
@@ -136,16 +137,16 @@
 	--stuen-dark: var(--jotun-11173-humbleyellow);
 	--stuen-light: var(--jotun-0486-silke);
 
-	
-	
 	--kajs: var(--jotun-8222-krydderurt);
 	--kajs: var(--jotun-8303-hvitlyng);
 	--kajs-dark: var(--jotun-8302-lauerbaer);
 	--kajs-light: var(--jotun-1928-sommersne);
 
+	/*
 	--kajs-alt: var(--jotun-8118-lovsal);
 	--kajs-alt-dark: var(--jotun-7628-treasure);
 	--kajs-alt-light: var(--jotun-8394-hvitpoesi);
+	*/
 
 	--fars: var(--jotun-8470-smoothwhite);
 	--fars-dark: var(--jotun-7637-exhale);
@@ -250,10 +251,10 @@ img {
 	margin: 0;
 }
 .photo img {
-	width: 100%;
 	object-fit: cover;
 }
 .photo figcaption {
+	white-space: nowrap;
 	padding-top: 20px;
 	text-align: right;
 	font-size: 0;
@@ -274,6 +275,7 @@ img {
 }
 .photo picture,
 .photo picture img {
+	min-width: 100%;
 	max-width: 40vw;
 	max-height: calc(calc(0.8 * var(--height)) - 80px);
 	border-radius: 2px;
