--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,13 @@
 	--jotun-8238-pearsensation: #dbdfc4; /* https://www.jotun.com/me/en/decorative/exterior/colours/8238-8238 */
 
 	/* alive */
+	--jotun-8118-lovsal: #c5c6b8; /* https://www.jotun.com/dk/da/decorative/interior/colours/8118-crisp-interior */
+	--jotun-7626-airygreen: #d8dbcf; /* https://www.jotun.com/no/no/decorative/interior/colours/7626-airy-green-interior */
+	--jotun-7629-refresh: #cacfc3; /* https://www.jotun.com/me/en/decorative/interior/colours/7627-refresh-interior */
+	--jotun-7637-exhale: #b7bdb3; /* https://www.jotun.com/dk/da/decorative/interior/colours/7637-exhale-interior */
+	--jotun-7555-softmint: #c9d0c5; /* https://www.jotun.com/dk/da/decorative/interior/colours/7555-soft-mint-interior */
+	--jotun-7628-treasure: #a3a798; /* https://www.jotun.com/me/en/decorative/interior/colours/7628-treasure-interior */
+	--jotun-7629-antiquegreen: #8a8f81; /* https://www.jotun.com/me/en/decorative/interior/colours/7629-antique-green-interior */
 	--jotun-8222-krydderurt: #cac5a9; /* https://www.jotun.com/dk/da/decorative/interior/colours/8222-jurassic-grey-interior */
 	--jotun-8303-hvitlyng: #d7d3c1; /* https://www.jotun.com/dk/da/decorative/interior/colours/8303-white-heather-interior */
 	--jotun-8003-blekvier: #e3e1d0; /* https://www.jotun.com/dk/da/decorative/interior/colours/8003-peppermint-interior */
@@ -75,13 +82,6 @@
 	--jotun-12125-impression: #bba78e; /* https://www.jotun.com/no/no/decorative/interior/colours/12125-impression-interior */
 	--jotun-11174-curiousmind: #b7a992; /* https://www.jotun.com/dk/da/decorative/interior/colours/11174-curious-mind-interior */
 	--jotun-10246-velvet: #d6bd90; /* https://www.jotun.com/me/en/decorative/interior/colours/10246-velvet-interior */
-	--jotun-8118-lovsal: #c5c6b8; /* https://www.jotun.com/dk/da/decorative/interior/colours/8118-crisp-interior */
-	--jotun-7626-airygreen: #d8dbcf; /* https://www.jotun.com/no/no/decorative/interior/colours/7626-airy-green-interior */
-	--jotun-7629-refresh: #cacfc3; /* https://www.jotun.com/me/en/decorative/interior/colours/7627-refresh-interior */
-	--jotun-7637-exhale: #b7bdb3; /* https://www.jotun.com/dk/da/decorative/interior/colours/7637-exhale-interior */
-	--jotun-7555-softmint: #c9d0c5; /* https://www.jotun.com/dk/da/decorative/interior/colours/7555-soft-mint-interior */
-	--jotun-7628-treasure: #a3a798; /* https://www.jotun.com/me/en/decorative/interior/colours/7628-treasure-interior */
-	--jotun-7629-antiquegreen: #8a8f81; /* https://www.jotun.com/me/en/decorative/interior/colours/7629-antique-green-interior */
 	--jotun-1624-skylight: #f2f1e8; /* https://www.jotun.com/me/en/decorative/interior/colours/1624-skylight-interior */
 	--jotun-6378-iconic: #a1aba6; /* https://www.jotun.com/dk/da/decorative/interior/colours/6378-iconic-interior */
 	--jotun-6379-cityscape: #8c9893; /* https://www.jotun.com/dk/da/decorative/interior/colours/6379-cityscape-interior */
@@ -133,20 +133,18 @@
 
 	--stuen: var(--jotun-12123-contemporarywhite);
 	--stuen-dark: var(--jotun-12075-soothingbeige);
-	--stuen-dark: var(--jotun-12176-silhouette);
+	
 	--stuen-dark: var(--jotun-11173-humbleyellow);
+	--stuen-dark: var(--jotun-12176-silhouette);
 	--stuen-light: var(--jotun-0486-silke);
 
-	--kajs: var(--jotun-8222-krydderurt);
 	--kajs: var(--jotun-8303-hvitlyng);
 	--kajs-dark: var(--jotun-8302-lauerbaer);
 	--kajs-light: var(--jotun-1928-sommersne);
 
-	/*
 	--kajs-alt: var(--jotun-8118-lovsal);
 	--kajs-alt-dark: var(--jotun-7628-treasure);
 	--kajs-alt-light: var(--jotun-8394-hvitpoesi);
-	*/
 
 	--fars: var(--jotun-8470-smoothwhite);
 	--fars-dark: var(--jotun-7637-exhale);
@@ -329,3 +327,10 @@ section.fars:before {
 	background-repeat: repeat-y;
 	background-size: contain;
 }
+/*
+section.kajs:before {
+	background-image: url('images/akustikpanel-01.webp');
+	background-repeat: repeat-y;
+	background-size: contain;
+}
+*/
