--- a/styles.css
+++ b/styles.css
@@ -138,13 +138,13 @@
 	--stuen-dark: var(--jotun-12176-silhouette);
 	--stuen-light: var(--jotun-0486-silke);
 
-	--kajs: var(--jotun-8118-lovsal);
-	--kajs-dark: var(--jotun-7628-treasure);
-	--kajs-light: var(--jotun-8394-hvitpoesi);
+	--kajs: var(--jotun-8303-hvitlyng);
+	--kajs-dark: var(--jotun-8302-lauerbaer);
+	--kajs-light: var(--jotun-1928-sommersne);
 
-	--kajs-alt: var(--jotun-8303-hvitlyng);
-	--kajs-alt-dark: var(--jotun-8302-lauerbaer);
-	--kajs-alt-light: var(--jotun-1928-sommersne);
+	--kajs-alt: var(--jotun-8118-lovsal);
+	--kajs-alt-dark: var(--jotun-7628-treasure);
+	--kajs-alt-light: var(--jotun-8394-hvitpoesi);
 
 	--fars: var(--jotun-8470-smoothwhite);
 	--fars-dark: var(--jotun-7637-exhale);
