--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,7 @@
 	--jotun-8493-greentea: #9f9b7c; /* https://www.jotun.com/dk/da/decorative/interior/colours/8493-green-tea-interior */
 	--jotun-8565-hope: #afad88; /* https://www.jotun.com/dk/da/decorative/interior/colours/8565-hope-interior */
 	--jotun-8302-lauerbaer: #b0ae96; /* https://www.jotun.com/no/no/decorative/interior/colours/8302-laurel-interior */
+	--jotun-8426-dewygreen: #989a89; /* https://www.jotun.com/dk/da/decorative/exterior/colours/8426-dewy-green-exterior */
 	--jotun-1369-sol: ##ebd2a3; /* https://www.jotun.com/dk/da/decorative/interior/colours/1369-sun-interior */
 
 	/* misc */
@@ -142,9 +143,13 @@
 	--kajs-dark: var(--jotun-8302-lauerbaer);
 	--kajs-light: var(--jotun-1928-sommersne);
 
-	--kajs-alt: var(--jotun-8118-lovsal);
-	--kajs-alt-dark: var(--jotun-7628-treasure);
-	--kajs-alt-light: var(--jotun-8394-hvitpoesi);
+	--kajs-alt: var(--jotun-8281-palelinden);
+	--kajs-alt-dark: var(--jotun-8426-dewygreen);
+	--kajs-alt-light: var(--jotun-1928-sommersne);
+
+	--kajs-alt2: var(--jotun-8118-lovsal);
+	--kajs-alt2-dark: var(--jotun-7628-treasure);
+	--kajs-alt2-light: var(--jotun-8394-hvitpoesi);
 
 	--fars: var(--jotun-8470-smoothwhite);
 	--fars-dark: var(--jotun-7637-exhale);
@@ -174,6 +179,9 @@
 }
 .kajs-alt {
 	background-color: var(--kajs-alt);
+}
+.kajs-alt2 {
+	background-color: var(--kajs-alt2);
 }
 .lokum {
 	background-color: var(--lokum);
@@ -309,6 +317,9 @@ section.kajs .photo {
 section.kajs-alt .photo {
 	background-color: var(--kajs-alt-light);
 }
+section.kajs-alt2 .photo {
+	background-color: var(--kajs-alt2-light);
+}
 section.fars .photo {
 	background-color: var(--fars-light);
 }
@@ -321,20 +332,25 @@ section.kajs:before {
 section.kajs-alt:before {
 	background-color: var(--kajs-alt-dark);
 }
+section.kajs-alt2:before {
+	background-color: var(--kajs-alt2-dark);
+}
 section.fars:before {
 	background-color: var(--fars-dark);
 	background-image: url('images/kirkenes.webp');
 	background-repeat: repeat-y;
-	background-size: contain;
+	background-size	: contain;
 }
 section.kajs:before,
-section.kajs-alt:before {
+section.kajs-alt:before,
+section.kajs-alt2:before {
 	background-image: url('images/akustikpanel.webp');
 	background-repeat: repeat-y;
 	background-size: contain;
 	background-position: -8px 0;
 }
-section.kajs-alt {
+section.kajs-alt,
+section.kajs-alt2 {
 	display: none;
 }
 .toggle {
