--- a/styles.css
+++ b/styles.css
@@ -141,8 +141,8 @@
 	--stuen-light: var(--jotun-0486-silke);
 
 	--kajs: var(--jotun-8118-lovsal);
-	--kajs-dark: var(--jotun-7628-treasure);
-	--kajs-light: var(--jotun-8394-hvitpoesi);
+	--kajs-dark: var(--jotun-6379-cityscape);
+	--kajs-light: var(--jotun-8303-hvitlyng);
 
 	--fars: var(--jotun-8470-smoothwhite);
 	--fars-dark: var(--jotun-1877-valmuefro);
